--- a/views/invitation.ejs
+++ b/views/invitation.ejs
@@ -34,10 +34,10 @@
            		$("#selectPresent").addClass('hide').show();
 			
            }
-           else if("dinner" == invitee.actType){
+           else if('dinner' == '<%invitee.actType%>'){
            		$("#showPresent").addClass('hide').show();
            }
-		   else ("dinner" == invitee.actType){
+		   else {
 				$("#selectPresent").addClass('hide').show();
 				$("#showPresent").addClass('hide').show();
 		   }
