--- a/views/index.ejs
+++ b/views/index.ejs
@@ -476,7 +476,7 @@
 									<th class="langZH">价格</th>
 								</tr>
 							</thead>
-							<tbody style="overflow-y: auto;">
+							<tbody id="giftablebody">
 								<% for(var i=0; i<presents.length; i++) { %>
 									<tr class="warning">
 										<td  class="langZH"><%= presents[i].nameZH %></td>
