delete darty png

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -489,16 +489,16 @@
 						<img src="darty.png" class="img-rounded img-responsive">
 					</div>
 					
-					<div class="col-md-3 langZH">
+					<!-- div class="col-md-3 langZH">
 						<img src="darty_cn.png" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-3 langFR">
 						<img src="darty_fr.png" class="img-rounded img-responsive">
-					</div>
+					</div -->
 					
 					<div class="col-md-6">
 						<h2 class="langFR">Liste des Cadeaux</h2>
-						<h2 class="langZH">礼物清单</h2>
+						<h2 class="langZH">礼物单</h2>
 						<table class="table table-bordered" id="giftable">
 							<thead>
 								<tr class="active">
