--- a/views/index.ejs
+++ b/views/index.ejs
@@ -448,7 +448,7 @@
 			</div>
 		</div>
 
-		<div class="slide" id="slide_dinner">
+		<!--div class="slide" id="slide_dinner">
 			<div class="container-fluid">
 				<div class="row">
 				
@@ -467,7 +467,7 @@
 									
 				</div>
 			</div>
-		</div>
+		</div -->
 		<div class="slide" id="slide_barbecue">
 			<div class="container-fluid">
 				<div class="row">
@@ -481,7 +481,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="slide" id="slide_cadeaux">
+		<!--div class="slide" id="slide_cadeaux">
 			<div class="container-fluid">
 				<div class="row">
 				
@@ -489,12 +489,12 @@
 						<img src="darty.png" class="img-rounded img-responsive">
 					</div>
 					
-					<!-- div class="col-md-3 langZH">
+					<div class="col-md-3 langZH">
 						<img src="darty_cn.png" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-3 langFR">
 						<img src="darty_fr.png" class="img-rounded img-responsive">
-					</div -->
+					</div >
 					
 					<div class="col-md-6">
 						<h2 class="langFR">Liste des Cadeaux</h2>
@@ -524,7 +524,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div-->
 	</div>
 </div>
 <div class="navbar navbar-fixed-bottom col-md-4 col-md-offset-8">
