modification of french errors

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -309,7 +309,7 @@
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							L'année 2011. Jing est revenue à SJTU pour poursuivre ses études, et Hao a couru après son ancien rêve. Ils se étaient retrouvés et ils ont gardé le vrai nom de l'un et l'autre. Hao a pris son plus grand courage pour prendre la main de Jing dans la sienne, en poursuivant leur rêve. Chaque week-end ils s'étaient retrouvés à SJTU dans le labo, jouaient matlab, regardaient 'Mentalist' et 'Nikita', et Hao préparait l'examen de GEM.
+							L'année 2011. Jing est revenue à SJTU pour poursuivre ses études, et Hao a couru après son ancien rêve. Ils s'étaient retrouvés et ils ont gardé le vrai nom de l'un et l'autre. Hao a pris son plus grand courage pour prendre la main de Jing dans la sienne, en poursuivant leur rêve. Chaque week-end ils s'étaient retrouvés à SJTU dans le labo, jouaient matlab, regardaient 'Mentalist' et 'Nikita', et Hao préparait l'examen de GEM.
 						</p>
 						<p class="langZH">
 							2011年，Jing回到了交大，Hao也回到了交大。Jing继续她的学业，Hao去寻找他曾经的梦想。 
@@ -331,7 +331,7 @@
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							Enfin, Jing est diplomé! En 2012, elle a réçu ses 3 diplomes et était plus diplomé que de lycéé. 
+						Enfin, Jing est diplômé! En 2012, elle a reçu ses 3 diplômes et était plus diplômé que de lycée.
 						</p>
 						<p class="langZH">
 							2012年，陪伴你坐在思源湖边，一起毕业。
@@ -350,7 +350,7 @@
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							Octobre 2012, après tous les revers sinueux que Hao a l'habitude, ils ont réussi de se rencontrer à Paris! Ils ont decouvert les petits et les grands rues partout en Europe.
+							Octobre 2012, après tous les revers sinueux que Hao a l'habitude, ils ont réussi de se rencontrer à Paris! Ils ont découvert les petites et les grandes rues partout en Europe.
 						</p>
 						<p class="langZH">
 							2012年10月 <br> "经历过无数让我习以为常的波折后，我们成功在巴黎会师啦! 我们一起行走欧洲，温暖的气氛在周围荡漾。" --Hao
@@ -415,7 +415,7 @@
 			
 				<div class="col-md-6 col-md-offset-1">
 					<h6 class="langFR">
-						L'histoire continue. Désormais, c'est un nouveau chapitre avec la passion et pleins d'amours!
+						L'histoire continue. Désormais, c'est un nouveau chapitre avec la passion et plein d'amours!
 					</h6>
 					<h6 class="langZH">
 						我们的故事还在继续。		
