modification page list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -481,7 +481,7 @@
 				</div>
 			</div>
 		</div>
-		<!--div class="slide" id="slide_cadeaux">
+		<div class="slide" id="slide_cadeaux">
 			<div class="container-fluid">
 				<div class="row">
 				
@@ -504,8 +504,8 @@
 								<tr class="active">
 									<th class="langFR">Cadeaux</th>
 									<th class="langZH">礼物</th>
-									<th class="langFR">Donneur</th>
-									<th class="langZH">赠送者</th>
+									<!--th class="langFR">Donneur</th>
+									<th class="langZH">赠送者</th-->
 									<th class="langFR">Prix</th>
 									<th class="langZH">价格</th>
 								</tr>
@@ -515,7 +515,7 @@
 									<tr class="warning">
 										<td  class="langZH"><%= presents[i].nameZH %></td>
 										<td  class="langFR"><%= presents[i].nameFR %></td>
-										<td><%= presents[i].inviteeName %></td>
+										<!-td><%= presents[i].inviteeName %></td-->
 										<td><%= presents[i].price %></td>
 									</tr>
 								<% } %>
@@ -524,7 +524,7 @@
 					</div>
 				</div>
 			</div>
-		</div-->
+		</div>
 	</div>
 </div>
 <div class="navbar navbar-fixed-bottom col-md-4 col-md-offset-8">
