modification page list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -496,7 +496,7 @@
 						<img src="darty_fr.png" class="img-rounded img-responsive">
 					</div >
 					
-					<div class="col-md-6">
+					<!--div class="col-md-6">
 						<h2 class="langFR">Liste des Cadeaux</h2>
 						<h2 class="langZH">礼物单</h2>
 						<table class="table table-bordered" id="giftable">
@@ -504,8 +504,8 @@
 								<tr class="active">
 									<th class="langFR">Cadeaux</th>
 									<th class="langZH">礼物</th>
-									<!--th class="langFR">Donneur</th>
-									<th class="langZH">赠送者</th-->
+									<th class="langFR">Donneur</th>
+									<th class="langZH">赠送者</th>
 									<th class="langFR">Prix</th>
 									<th class="langZH">价格</th>
 								</tr>
@@ -515,13 +515,13 @@
 									<tr class="warning">
 										<td  class="langZH"><%= presents[i].nameZH %></td>
 										<td  class="langFR"><%= presents[i].nameFR %></td>
-										<!-td><%= presents[i].inviteeName %></td-->
+										<td><%= presents[i].inviteeName %></td>
 										<td><%= presents[i].price %></td>
 									</tr>
 								<% } %>
 							</tbody>
 						</table>
-					</div>
+					</div-->
 				</div>
 			</div>
 		</div>
