modify welcom page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,7 @@
 	<script type="text/javascript">
         $(document).ready(function() {
         	$('.countdown').downCount({
-            	date: '05/02/2015 15:00:00',
+            	date: '05/12/2011 20:00:00',
             	offset: 0
         		});
         });
@@ -152,8 +152,8 @@
 			<div class="langEN">Love Road</div>
 		</a></li>
 		<li data-menuanchor="programme"><a href="#programme">
-			<div class="langFR">Programme</div>
-			<div class="langZH">婚礼安排</div>
+			<div class="langFR">Notre cérémonie de mariage</div>
+			<div class="langZH">我们的婚礼</div>
 			<div class="langEN">Schedule</div>
 		</a></li>
 	</ul>
@@ -170,9 +170,9 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12" id="block">
-					<h1 class="langFR">Nous allons nous marier！</h1>
-					<h1 class="langZH">我们要结婚啦！</h1>
-					<h1 class="langEN">We are getting married！</h1>
+					<h1 class="langFR">Nous nous sommes mariés!</h1>
+					<h1 class="langZH">我们结婚啦！</h1>
+					<h1 class="langEN">We are married！</h1>
 				</div>
 			</div>
 			<div class="row">
@@ -184,9 +184,9 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<h3 class="langFR">dans</h3>
-					<h3 class="langZH">距此还有</h3>
-					<h3 class="langEN">in</h3>
+					<h3 class="langFR">ça fait</h3>
+					<h3 class="langZH">在一起已有</h3>
+					<h3 class="langEN">we've been together for</h3>
 				</div>
 			</div>
 			<div class="row">
@@ -402,10 +402,10 @@
 			
 				<div class="col-md-6 col-md-offset-1">
 					<h5 class="langFR">
-						Bientôt, dans cette petite ville charmante, Zhang Hao et Guo Jing vont entrer dans leur vie de couple en mariage.
+						Le 2 mai 2015, dans cette petite ville charmante, Zhang Hao et Guo Jing sont entrés dans leur vie de couple en mariage.
 					</h5>
 					<h5 class="langZH">
-						马上，在这座安静而美丽的小城，我们将牵手进入婚姻殿堂。					
+						乙未年庚辰月戊寅日,在这座安静而美丽的小城，我们牵手进入婚姻殿堂。					
 					</h5>
 				</div>
 			</div>
@@ -494,7 +494,6 @@
 		<div class="slide" id="slide_dinner">
 			<div class="container-fluid">
 				<div class="row">
-				
 					
 					<div class="col-md-5">
 						<img src="chateau.jpg" class="img-rounded img-responsive">
