--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
 	</script>
 	<script type="text/javascript">
         $(document).ready(function() {
-        	$('.countdown').downCount({
+        	$('.countdown').downTo({
             	date: '05/12/2011 20:00:00',
             	offset: 0
         		});
