modify welcome page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
 	</script>
 	<script type="text/javascript">
         $(document).ready(function() {
-        	$('.countdown').downTo({
+        	$('.countdown').countTo({
             	date: '05/12/2011 20:00:00',
             	offset: 0
         		});
@@ -557,7 +557,7 @@
 					</div>
 =======
 					</div-->
->>>>>>> 2061185e8c7679b92aa18eb661460da86e86cb2e
+
 				</div>
 			</div>
 		</div>
