modify welcome page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,6 +102,7 @@
 		 
 		$( document ).ready(function() {
 		countup();
+		alert("ok");
 		  $( "#block" ).animate({
 			width: "90%",
 			marginLeft: "1.5in",
