modify welcome page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,12 +88,12 @@
 		});
 	</script>
 	<script type="text/javascript">
-     /*   $(document).ready(function() {
+        $(document).ready(function() {
         	$('.countdown').downCount({
             	date: '05/02/2015 15:00:00',
             	offset: 0
         		});
-        });*/
+        });
 
 
     </script>
@@ -101,8 +101,7 @@
 		// Using multiple unit types within one animation.
 		 
 		$( document ).ready(function() {
-		countup();
-		alert("ok");
+	
 		  $( "#block" ).animate({
 			width: "90%",
 			marginLeft: "1.5in",
