modify welcome page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,7 +101,7 @@
 		// Using multiple unit types within one animation.
 		 
 		$( document ).ready(function() {
-		countup();
+		$('.countdown').countup();
 		  $( "#block" ).animate({
 			width: "90%",
 			marginLeft: "1.5in",
