--- a/views/index.ejs
+++ b/views/index.ejs
@@ -186,14 +186,14 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h3 class="langFR">Nous nous sommes mariés le 2 mai 2015!</h3>
-					<h3 class="langZH">我们于2015年5月2日结婚啦！</h3>
+					<h3 class="langZH">我们结婚啦！</h3>
 					<h3 class="langEN">on May 2nd 2015</h3>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<h3 class="langFR">depuis ce jour ça fait</h3>
-					<h3 class="langZH">琴瑟和谐已有</h3>
+					<h3 class="langFR">ça fait</h3>
+					<h3 class="langZH">在一起已走过</h3>
 					<h3 class="langEN">we've been together for</h3>
 				</div>
 			</div>
@@ -458,7 +458,7 @@
 						Le 2 mai 2015 à 15h, la cérémonie de mariage à la mairie de Castres.
 				</p>
 				<p class="langZH">
-						市政厅结婚典礼
+						市政厅结婚典礼。公元2015年5月2日下午3时于Castres。
 				</p>
 			</div>
 		</div>
@@ -466,16 +466,17 @@
 		<div class="slide" id="slide_dinner">
 			<div class="container-fluid">
 				<div class="row">
-
+			
+					<div class="col-md-4 langZH">
+						<img src="reception_cn.png" class="img-rounded img-responsive">
+					</div>	
+					
 					<div class="col-md-4 langFR">
 						<img src="reception_fr.png" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
 						<img src="chateaudinner.jpg" class="img-rounded img-responsive">
-					</div>			
-					<div class="col-md-4 langZH">
-						<img src="reception_cn.png" class="img-rounded img-responsive">
-					</div>	
+					</div>
 				<p class="langFR">
 						Quelques photos au Château de la Vère à Larroque.
 				</p>
@@ -499,7 +500,7 @@
 							Les cadeaux. Merci à tous et à toute d'être venu(e)s. C'était un très grand plaisir! Merci à notre ami(e)s, pour votre aide!
 						</p>
 						<p class="langZH">
-							馈赠的礼品。谢谢大家的帮助和到来！
+							收到的馈赠礼品。谢谢大家的到来！
 						</p>
 					</div>
 					<div class="col-md-3">
@@ -531,10 +532,10 @@
 						<img src="honeymoon2.jpg" class="img-rounded img-responsive">
 					</div>
 					<p class="langFR">
-						Quelques photos de voyage de noce à l'Île Maurice et la Réunion.
+						Quelques photos de voyage de noce à l'Île Maurice et la Réunion en nov. 2015.
 				    </p>
 				    <p class="langZH">
-						一些毛里求斯蜜月照片
+						蜜月。2015年11月于留尼旺及毛里求斯。
 				    </p>
 				</div>
 			</div>
@@ -550,7 +551,7 @@
 						Quelques photos de "cliché". Merci Maman!
 				    </p>
 				    <p class="langZH">
-						一些#必备流程：婚纱照。特别鸣谢妈咪:)
+						一些中国结婚"必备流程"：婚纱照。感谢老妈赞助:)
 				    </p>
 				</div>
 
